Quitando / de las imágenes que no cargaban

--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
                     <div class="carousel-inner">
                       <div class="carousel-item active">
                         <a href="#categoria1">
-                        <img src="/assets/producto.jpg" class="d-block w-100 h-10" alt="...">
+                        <img src="assets/producto.jpg" class="d-block w-100 h-10" alt="...">
                         <div class="carousel-caption d-none d-md-block text-dark">
                           <h5>Categoría 1</h5>
                         </div>
                         </a>
                       </div>
                       <div class="carousel-item">
-                          <img src="/assets/producto.jpg" class="d-block w-100" alt="...">
+                          <img src="assets/producto.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block text-dark">
                             <h5>Categoría 2</h5>
                         </div>
                       </div>
                       <div class="carousel-item">
-                          <img src="/assets/producto.jpg" class="d-block w-100" alt="...">
+                          <img src="assets/producto.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block text-dark">
                             <h5>Categoría 3</h5>
                         </div>
