--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="estilos.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="estilos.css">
 
-    <title>Hello, world!</title>
+    <title>Callidus Cloud</title>
   </head>
   <body>
     <!---------- Navbar ---------->
@@ -35,9 +37,9 @@
                   Nuestros Productos
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                  <li><a class="dropdown-item" href="#">Categoría 1</a></li>
-                  <li><a class="dropdown-item" href="#">Categoría 2</a></li>
-                  <li><a class="dropdown-item" href="#">Categoría 3</a></li>
+                  <li><a class="dropdown-item" href="#categoria1">Categoría 1</a></li>
+                  <li><a class="dropdown-item" href="#categoria2">Categoría 2</a></li>
+                  <li><a class="dropdown-item" href="#categoria3">Categoría 3</a></li>
                 </ul>
               </li>
             </ul>
@@ -106,15 +108,145 @@
         </div>
 </section>
 
-<!---------- Carousel ---------->
-    
-<section class="about p-5 bg-dark">
+<!---------- Products ---------->
+<section id="categoria1">
+<div class="container producto1">
+  <h2 class="mt-5 mb-0">Categoría 1</h2>
+  <div class="row d-flex justify-content-center">
+    <div id="carouselExampleDark" class="carousel carousel-dark slide col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="assets/producto1.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 1</h5>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="assets/producto2.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 2</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/producto3.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 3</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"  data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
+</section>
+
+<section id="categoria2">
+<div class="container producto2">
+  <h2 class="mt-5 mb-0">Categoría 2</h2>
+  <div class="row d-flex justify-content-center">
+    <div id="carouselExampleDark2" class="carousel carousel-dark slide col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="assets/producto4.png" class="d-block w-100 alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 1</h5>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="assets/producto3.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 2</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/producto2.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 3</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark2"  data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark2"  data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
+</section>
+
+<section id="categoria3">
+<div class="container producto3">
+  <h2 class="mt-5 mb-0">Categoría 3</h2>
+  <div class="row d-flex justify-content-center">
+    <div id="carouselExampleDark3" class="carousel carousel-dark slide col-7 col-sm-6 col-md-5 col-lg-4 col-xl-3" data-bs-ride="carousel">
+      <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleDark3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#carouselExampleDark3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#carouselExampleDark3" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div>
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="10000">
+          <img src="assets/producto2.png" class="d-block w-100 alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 1</h5>
+          </div>
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="assets/producto1.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 2</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="assets/producto4.png" class="d-block w-100" alt="...">
+          <div class="carousel-caption d-none d-md-block">
+            <h5>Producto 3</h5>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark3"  data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark3"  data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    </div>
+  </div>
+</div>
+</section>
+
+
+<!---------- About ---------->    
+<section class="about p-5 bg-dark mt-2">
     <div class="container">
         <div class="row">
             <img class="col-12 col-md-6" src="assets/pexels-ken-tomita-389819.jpg" alt="">
             <div class="about-text col-12 col-md-6 text-white d-flex flex-column justify-content-center">
                 <h3 class="display-2 mb-lg-5">Sobre Nosotros</h3>
-                <p>Nos dedicamos a la venta de artículos de decoración para escritorios, sea lugares de trabajo o de hogar</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste explicabo nostrum pariatur quis, sunt exercitationem sit iure assumenda doloremque! Repellat vitae, deserunt magnam sunt iste quaerat culpa inventore aperiam a?</p>
             </div>
         </div>
     </div>
